Start of signal controller overhaul.  Need to add GUI, and rendering boxes for the trigger areas.  Shouldn't crash worlds and will compile now, so can move on to other things while the GUI is made.

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -157,17 +157,13 @@ input.car.js_inhibit=DisableJoystick
 gui.trafficsignalcontroller.scan=Scan For Signals & Components
 gui.trafficsignalcontroller.scandistance=Scan Distance: 
 gui.trafficsignalcontroller.scanfound=Scan Found:
-gui.trafficsignalcontroller.primary=Primary axis: 
-gui.trafficsignalcontroller.signalmode=Mode: 
-gui.trafficsignalcontroller.modetime=Time Delay
-gui.trafficsignalcontroller.modetrigger=Vehicle Trigger
-gui.trafficsignalcontroller.moderedstone=Redstone Trigger
-gui.trafficsignalcontroller.moderemote=Redstone Control
+gui.trafficsignalcontroller.primary=Primary direction: 
 gui.trafficsignalcontroller.greenmaintime=Time main signal is Green:
 gui.trafficsignalcontroller.greencrosstime=Time cross signal is Green: 
 gui.trafficsignalcontroller.yellowmaintime=Time main signal is Yellow: 
 gui.trafficsignalcontroller.yellowcrosstime=Time cross signal is Yellow: 
 gui.trafficsignalcontroller.allredtime=Time all signals are Red:
+gui.trafficsignalcontroller.unsaved=WARNING: Changes have been made.  These only exist on your client.  You may exit this GUI to preview the intersection layout, but you must confirm the changes for them to be made active on other clients and in the world.
 gui.trafficsignalcontroller.confirm=CONFIRM 
 
 gui.vehicle_bench.weight=Weight (kg)
