Added neutral shifting per #865.

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -134,6 +134,8 @@ input.car.brake_digital=Brake
 input.car.panel=Panel
 input.car.shift_u=ShiftUp
 input.car.shift_d=ShiftDown
+input.car.shift_nu=ShiftNeutral
+input.car.shift_nd=ShiftNeutral
 input.car.horn=Horn
 input.car.park=ParkingBrake
 input.car.trailer=TrailerLink
