Re-tooled ground device paramters to allow for variable friction on various surfaces per #747.

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -255,7 +255,7 @@ info.item.engine.creative=Creative: Needs no fuel, accumulates no hours, cannot 
 info.item.ground_device.diameter=Diameter: 
 info.item.ground_device.motivefriction=Power friction: 
 info.item.ground_device.lateralfriction=Turning friction: 
-info.item.ground_device.rainfriction=Rain Friction Modifier: 
+info.item.ground_device.frictionmodifiers=Friction Modifiers: 
 info.item.ground_device.rotatesonshaft_true=Is a wheel 
 info.item.ground_device.rotatesonshaft_false=Is NOT a wheel
 info.item.ground_device.canfloat_true=Floats
