--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -248,10 +248,10 @@ info.item.engine.superchargerefficiency=Supercharger efficiency:
 info.item.engine.fueltype=Fuel type: 
 info.item.engine.fluids=Takes Fluids: 
 info.item.engine.hours=Runtime hours: 
-info.item.engine.oilleak=Has an oil leak!
-info.item.engine.fuelleak=Has a fuel leak!
-info.item.engine.brokenstarter=Electric starter is broken!
-info.item.engine.creative=Creative: Needs no fuel, accumulates no hours, cannot blow up.
+info.item.engine.oilleak=§cHas an oil leak!
+info.item.engine.fuelleak=§cHas a fuel leak!
+info.item.engine.brokenstarter=§cElectric starter is broken!
+info.item.engine.creative=§5Creative: Needs no fuel, accumulates no hours, cannot blow up.
 info.item.ground_device.diameter=Diameter: 
 info.item.ground_device.motivefriction=Power friction: 
 info.item.ground_device.lateralfriction=Turning friction: 
