Tweaked key actions and added key-start configs per #1046.

--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -35,6 +35,7 @@ interact.key.info.unlock=Vehicle unlocked!
 interact.key.info.own=You are now the owner of this vehicle!
 interact.key.info.unown=This vehicle is now no longer owned!
 interact.key.failure.notowner=Only the owner of this vehicle may make new keys!
+interact.key.failure.needvehiclekey=You must have the key of this vehicle to start it!
 interact.key.failure.wrongkey=This key does not go to this vehicle!
 interact.key.failure.alreadyowned=You are not the owner of this vehicle, you cannot change ownership!
 
