--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -57,6 +57,7 @@ interact.failure.seattaken=This seat is taken!
 interact.failure.vehiclelocked=This vehicle is locked!
 interact.failure.vehicleowned=You are not the owner of this vehicle and therefore cannot change it or its parts!
 interact.failure.nospace=There is not enough space to place down this vehicle here.
+interact.failure.cantremoveinventory=You cannot remove this part because it is not empty!
 
 interact.jumpercable.firstlink=Linking first engine to jumper cable.
 interact.jumpercable.secondlink=Engines linked.  Transmitting power.
