--- a/src/main/resources/assets/mts/lang/en_US.lang
+++ b/src/main/resources/assets/mts/lang/en_US.lang
@@ -1,298 +1,9 @@
 #Translated by don_bruce
 
-death.attack.bullet.null.null=%1$s was shot by a spy
-death.attack.bullet.null.player=%1$s got distracted while fighting %2$s and got shot by a spy
-death.attack.bullet.player.null=%1$s was shot by %2$s
-death.attack.bullet.player.player=%1$s got distracted while fighting %2$s and got shot by %3$s
-
-death.attack.propellor.null.null=%1$s was shredded by a propeller
-death.attack.propellor.null.player=%1$s was shredded by a propeller while fighting %2$s
-death.attack.propellor.player.null=%1$s was shredded by %2$s's propeller
-death.attack.propellor.player.player=%1$s was shredded by %2$s's propeller while fighting %3$s
-
-death.attack.jet_intake.null.null=%1$s was sucked into a jet engine
-death.attack.jet_intake.null.player=%1$s was sucked into a jet engine while fighting %2$s
-death.attack.jet_intake.player.null=%1$s was sucked into %2$s's jet engine
-death.attack.jet_intake.player.player=%1$s was sucked into %2$s's jet engine while fighting %3$s
-
-death.attack.jet_exhaust.null.null=%1$s was burnt to a crisp by a jet engine
-death.attack.jet_exhaust.null.player=%1$s was burnt to a crisp by a jet engine while fighting %2$s
-death.attack.jet_exhaust.player.null=%1$s was burnt to a crisp by %2$s's jet engine
-death.attack.jet_exhaust.player.player=%1$s was burnt to a crisp by %2$s's jet engine while fighting %3$s
-
-death.attack.wheel.null.null=%1$s was run over
-death.attack.wheel.null.player=%1$s was was run over while fighting %2$s
-death.attack.wheel.player.null=%1$s was run over by %2$s 
-death.attack.wheel.player.player=%1$s was run over by %2$s while fighting %3$s
-
-death.attack.crash.null.null=%1$s died in a crash
-death.attack.crash.null.player=%1$s got distracted while fighting %2$s and died in a crash
-death.attack.crash.player.null=%2$s crashed their vehicle and killed %1$s
-death.attack.crash.player.player=%1$s got distracted while fighting %2$s and let %3$s crashed their vehicle
- 
-interact.key.info.lock=Vehicle locked!
-interact.key.info.unlock=Vehicle unlocked!
-interact.key.info.own=You are now the owner of this vehicle!
-interact.key.info.unown=This vehicle is now no longer owned!
-interact.key.failure.notowner=Only the owner of this vehicle may make new keys!
-interact.key.failure.needvehiclekey=You must have the key of this vehicle to start it!
-interact.key.failure.wrongkey=This key does not go to this vehicle!
-interact.key.failure.alreadyowned=You are not the owner of this vehicle, you cannot change ownership!
-
-interact.fuelpump.toofar=The fuel pump is too far away from the vehicle.  The pump should be no more than 16 blocks away.
-interact.fuelpump.nofuel=The fuel pump does not have any fuel in it.  You need fuel in the fuel pump to use it.
-interact.fuelpump.wrongtype=This pump does not contain the same liquid as what is in the vehicle.
-interact.fuelpump.wrongengines=The fuel in this pump is not a valid fuel for the engines in the vehicle.  Check the manual for details.
-interact.fuelpump.connect=Fuel pump connected and pumping.
-interact.fuelpump.complete=Vehicle is full, disconnecting.
-interact.fuelpump.empty=Fuel pump is empty, disconnecting.
-interact.fuelpump.disconnect=Disconnecting and stopping pumping.
-
-interact.jerrycan.empty=This jerrycan is empty and cannot fuel this vehicle.
-interact.jerrycan.wrongtype=This jerrycan does not contain the same liquid as what is in the vehicle.
-interact.jerrycan.toofull=This vehicle is already full of fuel.  You cannot add any more.
-interact.jerrycan.success=Added 1000mb of fluid to this vehicle.
- 
-interact.failure.seattaken=This seat is taken!
-interact.failure.vehiclelocked=This vehicle is locked!
-interact.failure.vehicleowned=You are not the owner of this vehicle and therefore cannot change it or its parts!
-interact.failure.nospace=There is not enough space to place down this vehicle here.
-interact.failure.cantremoveinventory=You cannot remove this part because it is not empty!
-
-interact.jumpercable.firstlink=Linking first engine to jumper cable.
-interact.jumpercable.secondlink=Engines linked.  Transmitting power.
-interact.jumpercable.linkdropped=The two engines have moved too far apart from one another.  Breaking link.
-interact.jumpercable.powerequal=The two engines now have the same battery level.  Breaking link.
-interact.jumpercable.alreadylinked=This engine is already linked to another engine and cannot be linked.
-interact.jumpercable.toofar=The two engines are too far away.  They should be no further than 16 blocks apart.
-interact.jumpercable.samevehicle=The two engines are on the same vehicle.  That's not going to work well...
-
-interact.jumperpack.success=Charged vehicle battery to maximum.
-
-interact.fuelhose.firstlink=Source tank linked to fuel hose.
-interact.fuelhose.secondlink=Linked to tank/vehicle.  Transfering fluid.
-interact.fuelhose.linkdropped=The linked tanks have moved too far apart from one another.  Breaking link.
-interact.fuelhose.tankempty=Source tank is empty, disconnecting.
-interact.fuelhose.tankfull=Destination tank is full, disconnecting.
-interact.fuelhose.alreadylinked=This tank is already linked to another tank and cannot be linked.
-interact.fuelhose.toofar=The two tanks are too far away.  They should be no further than 16 blocks apart.
-interact.fuelhose.differentfluids=The source and destination tanks do not contain the same fluid and cannot be linked.
-
-interact.trailer.connected=Trailer connected.
-interact.trailer.disconnected=Trailer disconnected.
-interact.trailer.notfound=No trailers were found anywhere near this vehicle.
-interact.trailer.toofar=The trailer is too far from the vehicle.
-interact.trailer.wronghitch=This vehicle does not have the correct hitch for this trailer.
-interact.trailer.mismatch=A hitch was found that is close enough to connect, but was not the correct type.  Also, a matching hitch was found, but it was too far to connect.  Are you trying to use the wrong hitch?
-
-input.aircraft.mod=Mod
-input.aircraft.camlock=CamLock
-input.aircraft.yaw=Yaw
-input.aircraft.yaw_r=YawRight
-input.aircraft.yaw_l=YawLeft
-input.aircraft.pitch=Pitch
-input.aircraft.pitch_u=PitchUp
-input.aircraft.pitch_d=PitchDown
-input.aircraft.roll=Roll
-input.aircraft.roll_r=RollRight
-input.aircraft.roll_l=RollLeft
-input.aircraft.throttle=Throttle
-input.aircraft.throttle_u=ThrottleUp
-input.aircraft.throttle_d=ThrottleDown
-input.aircraft.flaps_u=FlapsUp
-input.aircraft.flaps_d=FlapsDown
-input.aircraft.brake=Brake
-input.aircraft.brake_digital=Brake
-input.aircraft.gear=Gear
-input.aircraft.panel=Panel
-input.aircraft.park=ParkingBrake
-input.aircraft.gun_fire=Gun
-input.aircraft.gun_switch=Switch Gun
-input.aircraft.radio=Radio
-input.aircraft.zoom_i=ZoomIn
-input.aircraft.zoom_o=ZoomOut
-input.aircraft.changeview=ChangeView
-input.aircraft.look_l=LookLeft
-input.aircraft.look_r=LookRight
-input.aircraft.look_u=LookUp
-input.aircraft.look_d=LookDown
-input.aircraft.look_a=LookDirectional
-input.aircraft.trim_yaw_r=TrimYawRight
-input.aircraft.trim_yaw_l=TrimYawLeft
-input.aircraft.trim_pitch_u=TrimPitchUp
-input.aircraft.trim_pitch_d=TrimPitchDown
-input.aircraft.trim_roll_r=TrimRollRight
-input.aircraft.trim_roll_l=TrimRollLeft
-input.aircraft.reverse=Reverse
-input.aircraft.js_inhibit=DisableJoystick
-
-input.car.mod=Mod
-input.car.camlock=CamLock
-input.car.turn=Turn
-input.car.turn_r=TurnRight
-input.car.turn_l=TurnLeft
-input.car.gas=Gas
-input.car.brake=Brake
-input.car.brake_digital=Brake
-input.car.panel=Panel
-input.car.shift_u=ShiftUp
-input.car.shift_d=ShiftDown
-input.car.shift_nu=ShiftNeutral
-input.car.shift_nd=ShiftNeutral
-input.car.horn=Horn
-input.car.park=ParkingBrake
-input.car.trailer=TrailerLink
-input.car.gun_fire=Fire Gun
-input.car.gun_switch=Switch Gun
-input.car.radio=Radio
-input.car.zoom_i=ZoomIn
-input.car.zoom_o=ZoomOut
-input.car.changeview=ChangeView
-input.car.look_l=LookLeft
-input.car.look_r=LookRight
-input.car.look_u=LookUp
-input.car.look_d=LookDown
-input.car.look_a=LookDirectional
-input.car.slow=Slow
-input.car.lights=Lights
-input.car.turnsignal_r=RightSignal
-input.car.turnsignal_l=LeftSignal
-input.car.js_inhibit=DisableJoystick
-
-gui.trafficsignalcontroller.scan=Scan For Signals & Components
-gui.trafficsignalcontroller.scandistance=Scan Distance: 
-gui.trafficsignalcontroller.scanfound=Scan Found:
-gui.trafficsignalcontroller.primary=Primary direction: 
-gui.trafficsignalcontroller.greenmaintime=Time main signal is Green:
-gui.trafficsignalcontroller.greencrosstime=Time cross signal is Green: 
-gui.trafficsignalcontroller.yellowmaintime=Time main signal is Yellow: 
-gui.trafficsignalcontroller.yellowcrosstime=Time cross signal is Yellow: 
-gui.trafficsignalcontroller.allredtime=Time all signals are Red:
-gui.trafficsignalcontroller.unsaved=WARNING: Changes have been made.  These only exist on your client.  You may exit this GUI to preview the intersection layout, but you must confirm the changes for them to be made active on other clients and in the world.
-gui.trafficsignalcontroller.confirm=CONFIRM 
-
-gui.vehicle_bench.weight=Weight (kg)
-gui.vehicle_bench.fuel=Fuel Cap. (mb)
-gui.vehicle_bench.controllers=Drivers/Pilots
-gui.vehicle_bench.passengers=Passengers
-gui.vehicle_bench.cargo=Cargo
-gui.vehicle_bench.mixed=Mixed
-gui.vehicle_bench.engine=Engine Size
-gui.vehicle_bench.wheel=Wheel Size
-gui.vehicle_bench.color=Color
-
-gui.panel.off=OFF
-gui.panel.on=ON
-gui.panel.start=START
-gui.panel.magneto=MAG
-gui.panel.engine=ENGINE
-gui.panel.trim_roll=ROLL TRIM
-gui.panel.trim_pitch=PITCH TRIM
-gui.panel.trim_yaw=YAW TRIM
-gui.panel.reverse=REV
-gui.panel.gear=GEAR
-gui.panel.beacon=BEACON
-gui.panel.autopilot=AUTO
-gui.panel.cruisecontrol=CRUISE
-
-gui.instruments.main=Main Instruments
-gui.instruments.control=Control Panel
-gui.instruments.clear=CLEAR
-gui.instruments.idle=Select an instrument.
-gui.instruments.decide=Click an instrument to add.
-
-gui.config.header.config.rendering=RENDERING
-gui.config.header.config.controls=CONFIG
-gui.config.header.controls=CONTROLS
-gui.config.controls.title=Choose a configuration to change:
-gui.config.controls.aircraft.keyboard=AIRCRAFT KEYBOARD
-gui.config.controls.aircraft.joystick=AIRCRAFT JOYSTICK
-gui.config.controls.car.keyboard=CAR/BOAT KEYBOARD
-gui.config.controls.car.joystick=CAR/BOAT JOYSTICK
-gui.config.controls.confirm=Confirm
-gui.config.joystick.error=ERROR: MTS could not initialize the control system!  This is likely due to a device mis-representing itself as a joystick to Java.  Mice have been known to have this issue, especially Corsair mice, so try a different mouse.  You may also try un-plugging your mouse, and then opening this GUI to re-poll the joysticks.  This won't make controls work on boot, but can be used if you only have one mouse.
-gui.config.joystick.disabled=ERROR: The control system locked up when MTS tried to initialize it.  This is likely a driver issue, and happens for some reason on some machines.  The root cause is not known, but if you find out how to make this erorr go away, let us know!  For now, joysick support will be disabled.
-gui.config.joystick.select=Choose a joystick:
-gui.config.joystick.name=Name:
-gui.config.joystick.type=Type:
-gui.config.joystick.mapping=Mapping
-gui.config.joystick.deadzone=Dead-zone:
-gui.config.joystick.state=State:
-gui.config.joystick.assignment=Assigned to:
-gui.config.joystick.cancel=Cancel
-gui.config.joystick.clear=Clear Assignment
-gui.config.joystick.choosemap=Choose what gets mapped to this button.
-gui.config.joystick.calibrate1=Move axis until numbers stop changing.
-gui.config.joystick.calibrate2=Then hit confirm to save settings.
-gui.config.joystick.axismode=Axis mode: 
-gui.config.joystick.normal=Normal
-gui.config.joystick.invert=Inverted
-gui.config.joystick.confirm=Confirm
-
-gui.error.title=!ERROR!
-gui.error.packmissing=MTS has detected that it has been started without a content pack.  This will result in NO vehicles being present!  If you do NOT have a content pack yet installed, please see the Curse page for this mod for a link to one.  If you DID download a pack ensure that it is the same place as all your other mods.  If the pack is in that location, and you are still seeing this message, ensure you are running the correct pack version.
-
-info.item.engine.automatic=Transmission: Automatic
-info.item.engine.manual=Transmission: Manual
-info.item.engine.numbergears=Number gears: 
-info.item.engine.gearratios=Gear Ratios: 
-info.item.engine.jetpowerfactor=Jet Power: 
-info.item.engine.bypassratio=Bypass Ratio: 
-info.item.engine.maxrpm=Max Possible RPM: 
-info.item.engine.maxsaferpm=Max safe RPM: 
-info.item.engine.fuelconsumption=Fuel use (mb/t): 
-info.item.engine.supercharged=Supercharged
-info.item.engine.superchargerfuelconsumption=Supercharger fuel use (mb/t): 
-info.item.engine.superchargerefficiency=Supercharger efficiency: 
-info.item.engine.fueltype=Fuel type: 
-info.item.engine.fluids=Takes Fluids: 
-info.item.engine.hours=Runtime hours: 
-info.item.engine.oilleak=§cHas an oil leak!
-info.item.engine.fuelleak=§cHas a fuel leak!
-info.item.engine.brokenstarter=§cElectric starter is broken!
-info.item.engine.creative=§5Creative: Needs no fuel, accumulates no hours, cannot blow up.
-info.item.ground_device.diameter=Diameter: 
-info.item.ground_device.motivefriction=Power friction: 
-info.item.ground_device.lateralfriction=Turning friction: 
-info.item.ground_device.frictionmodifiers=Friction Modifiers: 
-info.item.ground_device.rotatesonshaft_true=Is a wheel 
-info.item.ground_device.rotatesonshaft_false=Is NOT a wheel
-info.item.ground_device.canfloat_true=Floats
-info.item.ground_device.canfloat_false=Does not float
-info.item.propeller.staticPitch=Static Pitch
-info.item.propeller.dynamicPitch=Dynamic Pitch
-info.item.propeller.numberBlades=Blades: 
-info.item.propeller.pitch=Pitch: 
-info.item.propeller.diameter=Diameter: 
-info.item.propeller.maxrpm=Max RPM: 
-info.item.gun.diameter=Barrel Diameter (mm): 
-info.item.gun.length=Barrel Length (m): 
-info.item.gun.caseRange=Case Range (mm): 
-info.item.gun.fireDelay=Fire Delay (ticks): 
-info.item.gun.muzzleVelocity=Velocity (blk/s): 
-info.item.gun.capacity=Bullet Capacity: 
-info.item.gun.autoReload=Auto-Reloads
-info.item.gun.yawRange=Yaw Range: 
-info.item.gun.pitchRange=Pitch Range: 
-info.item.bullet.type.normal=Normal Bullet
-info.item.bullet.type.explosive=Explosive Bullet
-info.item.bullet.type.incendiary=Incendiary Bullet
-info.item.bullet.type.armor_piercing=Armor Piercing Bullet
-info.item.bullet.type.tracer=Tracer Bullet
-info.item.bullet.type.water=Water Bullet
-info.item.bullet.diameter=Diameter (mm): 
-info.item.bullet.caseLength=Case Length (mm): 
-info.item.bullet.penetration=Penetration (mm): 
-info.item.bullet.quantity=Quantity: 
-info.item.interactable.capacity=Capacity: 
-info.item.jerrycan.fill=Fill can by right-clicking a fuel pump.
-info.item.jerrycan.drain=Fill vehicle by right-clicking with full can.
-info.item.jerrycan.empty=Can is currently empty.
-info.item.jerrycan.contains=Can contains: 
-
-
-key.categories.mts=Minecraft Transport Simulator
-key.mts.config=Open configuration screen
+death.attack.bullet.null.null=%s was shot by a spy
+death.attack.bullet.null.player=%s got distracted while fighting %s and got shot by a spy
+death.attack.bullet.player.null=%s was shot by %s
+death.attack.bullet.player.player=%s got distracted while fighting %s and got shot by %s
 
 advancements.mts.root.title=Immersive Vehicles (MTS)
 advancements.mts.root.description=Start your journey into powered transport!
@@ -301,7 +12,7 @@ advancements.mts.rtfm.description=Craft a Manual
 
 advancements.mts.custombench.title=Custom Parts
 advancements.mts.custombench.description=Create a Tool Bench
-advancements.mts.decorbench.title=I Thought This Was Decocraft...
+advancements.mts.decorbench.title=I Thought This Was Decocraft..
 advancements.mts.decorbench.description=Create a Decor Bench
 advancements.mts.enginebench.title=Rev it Up
 advancements.mts.enginebench.description=Create an Engine Hoist
@@ -315,7 +26,7 @@ advancements.mts.propellerbench.title=Propwash
 advancements.mts.propellerbench.description=Create a Propeller Bench
 advancements.mts.seatbench.title=Seats, Supplies, and Storage
 advancements.mts.seatbench.description=Create a Table Saw
-advancements.mts.vehiclebench.title=So Many Choices...
+advancements.mts.vehiclebench.title=So Many Choices..
 advancements.mts.vehiclebench.description=Create a Drafting Bench
 advancements.mts.wheelbench.title=Moving on the Ground (or Water)
 advancements.mts.wheelbench.description=Create a Wheel Workbench
@@ -324,7 +35,7 @@ advancements.mts.fuelhose.title=Transfer Time
 advancements.mts.fuelhose.description=Create a fuel hose
 advancements.mts.fuelpump.title=Fill 'Er Up
 advancements.mts.fuelpump.description=Create a fuel pump
-advancements.mts.jerrycan.title=Just in Case...
+advancements.mts.jerrycan.title=Just in Case..
 advancements.mts.jerrycan.description=Create a jerrycan
 advancements.mts.jumpercable.title=Jump Start
 advancements.mts.jumpercable.description=Create some jumper cables
