Added electric charger block per #1270 and fixed blockstate JSONs to not complain about missing variants in the logs.

--- a/mcinterfaceforge1122/src/main/resources/assets/mts/lang/en_US.json
+++ b/mcinterfaceforge1122/src/main/resources/assets/mts/lang/en_US.json
@@ -24,6 +24,8 @@
     "advancements.mts.vehiclebench.description": "Create a Drafting Bench",
     "advancements.mts.wheelbench.title": "Moving on the Ground (or Water)",
     "advancements.mts.wheelbench.description": "Create a Wheel Workbench",
+		"advancements.mts.charger.title": "Going Green",
+		"advancements.mts.charger.description": "Create a charger",
     "advancements.mts.fuelhose.title": "Transfer Time",
     "advancements.mts.fuelhose.description": "Create a fuel hose",
     "advancements.mts.fuelpump.title": "Fill 'Er Up",
